# opencv_playground

./: CMakeLists.txt  main.cpp
